# fastq-tools

./: Cargo.toml  Makefile  README.md
.github/workflows/: tests.yml
src/: cli.rs  fastq.rs  main.rs  metadata_file.rs
