[package]
name = "fastq-tools"
version = "0.2.0"
edition = "2024"
authors = ["Paul-Christian Volkmer"]
description = "Application to show information about and scramble FASTQ files to provide non-sensitive data for development purposes"
license = "GPL-3"
readme = "README.md"

[dependencies]
regex = "1.11"
clap = {  version = "4.5", features = ["color", "derive"]}
