[package]
name = "fastq-tools"
version = "0.2.0"
edition = "2024"
authors = ["Paul-Christian Volkmer"]
description = "Application to show information about and scramble FASTQ files to provide non-sensitive data for development purposes"
license = "GPL-3"
readme = "README.md"

[dependencies]
regex = "1.11"
clap = {  version = "4.5", features = ["color", "derive"]}
console = "0.16"
itertools = "0.14"
flate2 = "1.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base16ct = { version = "0.3", features = ["alloc"] }
sha2 = { version = "0.10", default-features = false }

[profile.release]
opt-level = "z"
codegen-units = 1
lto = true
strip = true
panic = "abort"
